# frenet-state-transformation

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  annotated.html  classFrenetTransform_1_1Path-members.html  classFrenetTransform_1_1Path.html  classFrenetTransform_1_1Path__inherit__graph.map  classFrenetTransform_1_1Path__inherit__graph.md5  classFrenetTransform_1_1Point-members.html  classFrenetTransform_1_1Point.html  classFrenetTransform_1_1Points-members.html  classFrenetTransform_1_1Points.html  classFrenetTransform_1_1Polychain-members.html  classFrenetTransform_1_1Polychain.html  classFrenetTransform_1_1Polychain__coll__graph.map  classFrenetTransform_1_1Polychain__inherit__graph.md5  classFrenetTransform_1_1Transform-members.html  classFrenetTransform_1_1Transform.html  class__core_1_1Path-members.html  class__core_1_1Path.html  class__core_1_1Path__inherit__graph.map  class__core_1_1Path__inherit__graph.md5  class__core_1_1Point-members.html  class__core_1_1Point.html  class__core_1_1Points-members.html  class__core_1_1Points.html  class__core_1_1Polychain-members.html  class__core_1_1Polychain.html  class__core_1_1Polychain__coll__graph.md5  class__core_1_1Polychain__inherit__graph.map  class__core_1_1Transform-members.html  class__core_1_1Transform.html  classes.html  dir_18c1bbadb4d937ae40c0c427d23dcbfd.html  dir_2c04d143de6e2a0fd53e518457d4eb9a.html  dir_2c04d143de6e2a0fd53e518457d4eb9a_dep.map  dir_2c04d143de6e2a0fd53e518457d4eb9a_dep.md5  (+39 more)
.github/workflows/: build-and-test.yml  build-wheels.yml  doxygen-gh-pages.yml
benchmarks/: CMakeLists.txt  benchmark.bash  circleBenchmark.cpp
bindings/python/frenetTransform/: CMakeLists.txt  build_stubs.py  frenetTransform.cpp
bindings/python/frenetTransform/stubs/: __init__.py
cmake/: Config.cmake.in
docs/: README.pypi.md
examples/: circlePolychain.cpp  circleTransform.cpp  coarsePolychain.cpp  examples.bash  stateTransform.cpp
examples/cpp/: CMakeLists.txt  circlePolychain.cpp  coarsePolychain.cpp  examples.bash
examples/python/: circlePolychain.py  coarsePolychain.py
include/: circle.h  math.h  path.h  point.h  points.h  polyline.h  transform.h
include/frenetTransform/: CMakeLists.txt  math.h  path.h  point.h  points.h  polychain.h  polyline.h  transform.h
include/frenetTransform/internal/: circle.h  constexprTypes.h  line.h  math.h  transformCircle.h
include/frenetTransform/test/: pathCircleTest.h  pathPolylineLineTest.h  testBase.h
search/: all_1.js  all_10.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  pages_1.js  related_0.js  searchdata.js
src/: CMakeLists.txt  path.cpp  polyline.cpp  transform.cpp
test/: CMakeLists.txt  MathTest.cpp  PolylineTest.cpp  benchmark.sh  mathTest.cpp  pathCircleTest.cpp  pathPolylineLineTest.cpp  pathPolylineTest.cpp
test/include/: CircleTest.h  circle.h  line.h  pathCircleTest.h  pathPolylineLineTest.h  testBase.h  transformCircle.h
test/src/: CMakeLists.txt  CircleTest.cpp  PolylineTest.cpp  mathTest.cpp  pathCircleTest.cpp
test/src/benchmarks/: CMakeLists.txt  circleBenchmark.cpp
test/src/tests/: CMakeLists.txt  mathTest.cpp  pathCircleTest.cpp  pathPolylineLineTest.cpp  pathPolylineTest.cpp
