[build-system]
requires = [
    "scikit-build-core",
    "pybind11",
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "frenet-state-transformation"
version = "1.1.0"
readme = "docs/README.pypi.md"
authors = [{ name = "Philip Dorpmüller", email = "philip.dorpmueller@web.de" }]
description = "Transformation of dynamic state from Cartesian to Frenet coordinates and vice versa."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy",
    "pybind11",
]

[project.urls]
Github = "https://github.com/phdorp/frenet-state-transformation"

[project.optional-dependencies]
EXAMPLES = ["matplotlib"]
DOCS = ["doxypypy"]
STUBS = ["pybind11-stubgen"]

[tool.scikit-build]
cmake.args = [
    "-DBUILD_TEST=OFF",
    "-DBUILD_BENCHMARK=OFF",
    "-DBUILD_EXAMPLES=OFF",
    "-DBUILD_DOCS=OFF",
    "-DBUILD_PYBINDS=ON"
]
cmake.build-type = "Release"
